# lumos

./: .gitignore  DockerFile  Dockerfile  main.py  pyproject.toml  render-build.sh  render.yaml  requirements.txt
backend/: config.py  main.py  session_manager.py
backend/generators/: evaluation.py  extractor_agent.py  generate_notes.py  generate_quiz.py  mindmap_generator.py
backend/utils/: audio_service.py  form_vector_index.py  pdf_service.py  rag_agent.py  segment_transcript.py  text_service.py  youtube-transcripts.py  youtube_transcripts.py
