[project]
name = "lumos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "dspy>=3.0.4",
    "fastapi>=0.121.2",
    "graphviz>=0.21",
    "isodate>=0.7.2",
    "pypdf>=6.2.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
