[project]
name = "lumos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.4",
    "dotenv>=0.9.9",
    "dspy>=3.0.4",
    "fastapi>=0.121.2",
    "google-generativeai>=0.8.5",
    "graphviz>=0.21",
    "isodate>=0.7.2",
    "langchain-community>=0.4.1",
    "pypdf>=6.2.0",
    "python-multipart>=0.0.20",
    "pytube>=15.0.0",
    "requests>=2.32.5",
    "uuid>=1.30",
    "uvicorn>=0.38.0",
    "youtube-transcript-api>=1.2.3",
]
